spelling fixes, improved spacing on image

--- a/scss/enertalkHomeUSA/_main-community.scss
+++ b/scss/enertalkHomeUSA/_main-community.scss
@@ -5,6 +5,7 @@
     img{
         padding: 0px 0px 0px 0px;
         overflow: hidden;
+        margin-bottom: 5px;
     }
 
     img.center{
